# claude-soup3

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  NOTION_INTEGRATION_GUIDE.md  NOTION_MIGRATION_GUIDE.md  README.md  alembic.ini  docker-compose.yml  generate_articles.py  notion_topics_analysis.json  pyproject.toml  requirements.txt  setup_and_run.sh  simple_main.py  test_system.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: __init__.py
app/api/: dependencies.py  main.py  notion_endpoints.py  notion_web_endpoints.py  simple_notion_endpoints.py
app/core/: config.py  logging.py  monitoring.py
app/models/: database.py  domain.py
articles/: 01_compound_thinking_life_planning.md  02_risk_vs_opportunity_balance.md  03_multiple_income_streams_management.md  04_failure_to_wealth_wisdom.md  05_family_wealth_education.md  06_market_emotion_management.md  07_entrepreneurial_spirit_wealth_building.md  08_financial_habits_psychology.md  09_economic_cycles_personal_finance.md  10_skill_monetization_personal_branding.md  promp_v0
frontend/: .notion_config.sh  Dockerfile  NOTION_SETUP.md  api_server.py  create_notion_database.py  nginx.conf  notion_api_server.py  notion_config.py  server.py  setup_notion.py
scripts/: check_notion_topics.py  create_notion_databases.py  dev-setup.sh  diagnose_notion_connection.py  find_notion_databases.py  inspect_existing_notion_db.py  setup_existing_notion.py  start.sh  test_existing_notion.py  test_notion_integration.py  upload_articles_to_notion.py
static/: analytics.html  dashboard.html  index.html  robots.txt
(+15 files in other folders)
